@@ -3,6 +3,9 @@ BUG! If jack is selected for audio but there are no physical ports Yoshimi quits
 
 Minor bug Multi instances produce jack error reports when main instance closed, even if they have been closed first - been there since V 1.4.1 :(
 
+Vector UI is still making direct acesses to file system :(
+Also Master UI, MidiLearnUI
+
 Revise GUI voice list related to voice editor.
 
 Sort out bank properly.
