@@ -4,6 +4,7 @@
     Original ZynAddSubFX author Nasca Octavian Paul
     Copyright (C) 2002-2005 Nasca Octavian Paul
     Copyright 2009-2010, Alan Calvert
+    Copyright 2018-2019 Will Godfrey
 
     This file is part of yoshimi, which is free software: you can redistribute
     it and/or modify it under the terms of the GNU Library General Public
@@ -19,7 +20,9 @@
     yoshimi; if not, write to the Free Software Foundation, Inc., 51 Franklin
     Street, Fifth Floor, Boston, MA  02110-1301, USA.
 
-    This file is a derivative of a ZynAddSubFX original, modified October 2010
+    This file is a derivative of a ZynAddSubFX original
+
+    Modified February 2019
 */
 
 #ifndef PRESETSSTORE_H
@@ -27,6 +30,7 @@
 
 #include "Misc/Config.h"
 #include "Misc/MiscFuncs.h"
+#include "Interface/FileMgr.h"
 
 #define MAX_PRESETTYPE_SIZE 30
 
@@ -35,7 +39,7 @@ class PresetsStore;
 
 class SynthEngine;
 
-class PresetsStore : MiscFuncs
+class PresetsStore : MiscFuncs, FileMgr
 {
     public:
         PresetsStore(SynthEngine *_synth);
