@@ -11,7 +11,7 @@ comment {MasterUI.cc} {in_source not_in_header
 comment {Original ZynAddSubFX author Nasca Octavian Paul
 Copyright (C) 2002-2005 Nasca Octavian Paul
 Copyright 2009-2011, Alan Calvert
-Copyright 2014-2018, Will Godfrey & others
+Copyright 2014-2019, Will Godfrey & others
 
 This file is part of yoshimi, which is free software: you can redistribute
 it and/or modify it under the terms of the GNU Library General Public
@@ -29,7 +29,7 @@ Street, Fifth Floor, Boston, MA  02110-1301, USA.
 
 This file is a derivative of the ZynAddSubFX original.
 
-Modified October 2018} {selected in_source in_header
+Modified February 2019} {selected in_source in_header
 }
 
 decl {\#include <string>} {public local
@@ -92,10 +92,13 @@ decl {\#include "Misc/SynthEngine.h"} {public local
 decl {\#include "Misc/MiscFuncs.h"} {public local
 }
 
+decl {\#include "Interface/FileMgr.h"} {public local
+}
+
 decl {\#include "MidiLearnUI.h"} {public local
 }
 
-class MasterUI {: {private GuiUpdates}
+class MasterUI {: {private GuiUpdates, FileMgr}
 } {
   Function {MasterUI(SynthEngine *_synth)} {} {
     code {//
